# LastFomLauncher

./: .gitmodules  ACHIEVEMENT_NOTIFICATION_GUIDE.md  ACTIVITY_LOOP_FIX.md  ADMOB_SSV_PRODUCTION_SETUP.md  ADMOB_SSV_SETUP.md  CHECKLIST.md  CHECKLIST_FIX_COINS.md  COIN_REWARD_SYSTEM_FIXED.md  CRASH_HANDLER_README.md  DOWNLOAD_OPTIMIZATION_FIX.md  EDITTEXT_BACKGROUND_FIX.md  FIRESTORE_DATA_PERSISTENCE.md  FIRESTORE_SECURITY_RULES_FIX.md  GET_LFCOINS_ADMOB_README.md  MARKETPLACE_FILTER_FIX.md  MINECRAFT_THEME_COMPATIBILITY_FIX.md  NOTIFICATION_QUICK_START.md  README.md  SETUP_SUMMARY.md  START_HERE.md  THEME_BACKGROUND_SYSTEM.md  THEME_DOWNLOAD_FIX.md  THEME_SELECTION_FEATURE.md  UNITY_ADS_MIGRATION_COMPLETE.md  UNITY_ADS_QUICK_REFERENCE.md  UNITY_ADS_SETUP.md  admob-config-generated.txt  admob-config.ini  build.gradle  fix-firestore-permission.bat  open-firebase-console.bat  quick-setup-admob.ps1  test-admob-api.ps1
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: whats_new.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/color/: material_highlighted_text.xml
app/src/main/res/drawable/: avatar.xml  coin.xml  control_button.xml  control_button_focused.xml  control_button_normal.xml  control_button_pressed.xml  custom_checkbox_square.xml  discord_logo.xml  edit_text_material.xml  edittext_background.xml  green_status.xml  installation_boder.xml  notification_background.xml  progress_bar_custom.xml  searchbackground.xml  spinner_item_bg.xml  switch_thumb_active.xml  (+3 more)
gradle/: libs.versions.toml
(+96 files in other folders)
